outside of function parameters allowing more specific error reporting (since
they're still illegal).

** C++11 explicit user-defined conversion operators
Explicit user-defined conversion operators are now correctly allowed in C++11
and later.

** Better alignment error location
Improved the location of alignment errors.

** Fixed aligned bit fields
Aligned bit fields are now correctly forbidden.

** Fixed function returning pointer to member pointer to T
The output of a declaration like:

    c++decl> declare f as function returning pointer to member of class C \
        pointer to int
    int* C::* f();

has been fixed.

** `pointer` auto-completion
`pointer` is now auto-completable.

** Fixed implicit `int` checking error message
A declaration omitting `int` now gives the correct error message:

     cdecl> explain void f(register i)
                           ^
     16: error: implicit "int" is illegal since C99

** Fixed `const` array
Array parameters no longer have a space wrongly emitted after `const`.

** Fixed fixed type `enum` definition
Fixed type `enum` definitions are now printed as C++ correctly.


* Changes in Cdecl 12.0

** Added suggestions
Added suggestions to error messages in certain cases when a keyword is
expected, for example:

    cdecl> declare x as type poiner to int
                             ^
    19: syntax error: "poiner": "as" expected; did you mean "pointer"?

** Better executable name checking
Previously, if cdecl was invoked as `cast`, `declare`, or `explain`, or with a
name that isn't a command (through renaming or a hard or a symbolic link)
without command-line arguments, it behaved as if it were invoked as `cdecl`
without error.  This has been fixed.

** C23
The placeholder name of C2X has been changed to C23.

** Color and `TERM`
The `TERM` environment variable is no longer considered when determining
whether color should be used in output.  Now, all that matters is whether the
output stream is connected to a TTY.
